# learn_ai

./: 1.Basics.ipynb  2.OpenAI_API.ipynb  3.HuggingFace.ipynb  4.RAG_1.ipynb  4.RAG_2.ipynb  4.RAG_3.ipynb  config.yml  pyproject.toml
implementation/: answer.py  ingest.py
