[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "chroma>=0.2.0",
    "datasets>=4.5.0",
    "gradio>=6.5.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.14",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.24",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "pandas>=3.0.0",
    "plotly>=6.6.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "setuptools>=80.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    # "tensorflow>=2.20.0", # protobuf version conflict with langchain_chroma
    "tiktoken>=0.11.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.1.0",
    "protobuf>=3.20,<4.0",
    "jinja2>=3.1.6",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

